--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                         Studentlar
                     </a>
                     <a href="/enrollments/" class="text-gray-700 hover:text-blue-600 transition-colors font-medium">
-                        Ro'yxatdan o'tish
+                        Kursga ariza berish
                     </a>
                 </div>
 
